[project]
name = "claude-mirror"
version = "0.1.0"
description = "Mirror Claude Code's interface to OpenAI, Azure, and other compatible providers"
readme = "README.md"
# No Python version constraint - works with any Python version
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.14",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
claude-mirror = "claude_mirror.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

